# indi-3rdparty

cmake_modules/: FindSONYCAM.cmake
indi-sonycam/: CMakeLists.txt  CameraDevice.cpp  CameraDevice.h  ConnectionInfo.cpp  MessageDefine.h  PropertyValueTable.h  README.md  RemoteCli.cpp  config.h.cmake  indi_sonycam.xml.cmake  sonycam.cpp
libsonycam/: CMakeLists.txt  README.md
libsonycam/include/: CrDeviceProperty.h
